# hermetic-llvm

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  configure.report.md  rbe.bzl
.agents/plans/: libstdcxx-configure-checks.md
.agents/skills/update-llvm-version/: SKILL.md
.github/workflows/: ci.yaml  llvm-prebuilt.sh  llvm-prebuilt.yml  prebuilts-extras.sh  prebuilts-extras.yml
config/: defs.bzl
constraints/cxxstdlib/: BUILD.bazel  cxxstdlib_versions.bzl
constraints/kernel/: BUILD.bazel  declare_linux_uapi_constraints.bzl  linux_uapi_versions.bzl
constraints/kernel/linux/: BUILD.bazel  declare_linux_kernel_constraints.bzl  linux_kernel_versions.bzl
constraints/windows/abi/: BUILD.bazel  abis.bzl  declare_abis_constraints.bzl
e2e/cross_compilation/: BUILD.bazel  MODULE.bazel  test_hello_qemu.sh
e2e/cuda/: saxpy_cuda.cu
e2e/llvm_version_selection/: MODULE.bazel
e2e/rules_cc/: .bazelrc  BUILD.bazel  BUILD.node-re2  BUILD.nodejs_nan  MODULE.bazel  asan_runtime_cc_test.cc  asan_shared_output_test.sh  defs.bzl  external_include_paths_test.sh  lsan_runtime_cc_test.cc  math.cppm  modules_main.cc  nasm_test.sh  node-re2.patch  node_napi.bzl  node_re2_test.js  package.json  pnpm-lock.yaml  shared_sanitizer_dso_test.sh  shared_sanitizer_link_mode_test.sh  tsan_shared_output_test.sh  ubsan_runtime_cc_test.cc
e2e/rules_cc/windows_dll/: BUILD.bazel
e2e/rules_foreign_cc/: MODULE.bazel
e2e/rules_rs/: BUILD.bazel  MODULE.bazel  rust_binary_cross_build_test_suite.bzl
e2e/rules_rust/: MODULE.bazel  rust_binary_cross_build_test_suite.bzl
e2e/wasm/: BUILD.bazel  MODULE.bazel
examples/custom_targets/: BUILD.bazel  MODULE.bazel
extensions/: BUILD.bazel  gcc.bzl  llvm.bzl  llvm_source.bzl  llvm_toolchain_minimal.bzl  llvm_toolchain_minimal_index.json  osx.bzl  toolchain.bzl
kernel/extension/: BUILD.bazel  make_select_kernel_headers_repository_target.bzl
prebuilt/libclang/: BUILD.bazel  libclang.BUILD.bazel  libclang_release.bzl
prebuilt/llvm/: BUILD.bazel  llvm_release.bzl
private/: BUILD.bazel  llvm_project_archive.bzl  llvm_project_common.bzl  llvm_project_from_git.bzl  llvm_project_from_path.bzl
runtimes/: BUILD.bazel  README.md  copy_to_resource_directory.bzl
runtimes/compiler-rt/: BUILD.bazel
runtimes/configure/: BUILD.bazel  native_autoconf_checks.bzl
runtimes/cxxstdlib/: BUILD.bazel  transitioned_alias.bzl
runtimes/glibc/: BUILD.bazel  abilists
runtimes/libcxx/: BUILD.bazel
runtimes/libgcc/: BUILD.bazel  README.md
runtimes/libstdcxx/: AGENTS.md  BUILD.bazel  acinclude.m4.bzl  acinclude_checks.bzl  autoconf.README.md  autoconf.usage.md  cc_configure_probe.bzl  cc_rules.bzl  config_checks.bzl  config_define_audit_test.sh  config_define_status.txt  config_macro_status.txt  config_probe.bzl  configure.ac.bzl  configure.bzl  configure_ac_checks.bzl  crossconfig.m4.bzl  crossconfig_checks.bzl  headers.bzl  libstdcxx_config_h.bzl  libstdcxx_cxxconfig_header.bzl  libstdcxx_gthr_headers.bzl  libstdcxx_largefile_config_header.bzl  libstdcxx_shared_elf_test.sh  linkage.m4.bzl  symbols.bzl  target_config.bzl
runtimes/libstdcxx/autoconf/: BUILD.bazel  acinclude_checks.bzl  autoconf.README.md  autoconf.checks.md  autoconf_config.bzl  autoconf_hdr.bzl  autoconf_inventory.sh  cc_configure_probe.bzl  config_macro_status.txt  configure_ac_checks.bzl  crossconfig_checks.bzl  gcc_config_checks.bzl  native_autoconf_checks.bzl
runtimes/libstdcxx/docs/: autoconf.README.md  autoconf.checks.md  config_define_status.txt  config_macro_status.txt
runtimes/libstdcxx/libstdcxx_symbols_assembler_testdata/: port_insert.ver
runtimes/libstdcxx/tests/: BUILD.bazel  autoconf_inventory.sh  autoconf_inventory_targets.bzl
runtimes/libstdcxx/tools/: autoconf_inventory.sh
runtimes/libstdcxx/versioning/: BUILD.bazel  version_script.bzl
runtimes/libunwind/: BUILD.bazel
runtimes/mingw/: BUILD.bazel  import_libs.bzl
runtimes/musl/: BUILD.bazel
runtimes/unwindlib/: BUILD.bazel
tests/musl_static_pie/: BUILD.bazel  main.c
toolchain/: BUILD.bazel  bootstrap_stages.bzl  cc_toolchain.bzl  declare_toolchains.bzl  exec_stage0_binary.bzl  llvm_toolchain_minimal.bzl  selects.bzl
toolchain/args/: BUILD.bazel  llvm_target_triple.bzl
toolchain/args/linux/: BUILD.bazel
toolchain/args/macos/: BUILD.bazel  macos_minimum_os_flag.bzl  macos_minimum_os_version_info.bzl
toolchain/args/windows/: BUILD.bazel
toolchain/bootstrap/: BUILD.bazel  README.md  bootstrap_binary.bzl  declare_toolchains.bzl  fdo_profile.bzl  llvm_fdo_profile_runner.sh  transition_settings.bzl  zstd_fdo.BUILD.bazel  zstd_training.c  zstd_training.cc
toolchain/bootstrap/bolt/: BUILD.bazel  bolt.bzl
toolchain/bootstrap/stage3/: BUILD.bazel
toolchain/features/: BUILD.bazel
toolchain/features/legacy/: BUILD.bazel
toolchain/features/libraries_to_link/: BUILD.bazel
toolchain/features/pic_flags/: BUILD.bazel
toolchain/features/runtime_library_search_directories/: BUILD.bazel
toolchain/llvm/: llvm.bzl
toolchain/runtimes/: BUILD.bazel  cc_runtime_tool_binary.bzl  filegroup.bzl
toolchain/runtimes/args/: BUILD.bazel
tools/internal/: BUILD.bazel  c_tool_binary.bzl  deps_scanner.c  header_parser.c  libstdcxx_symbols_assembler.c  libstdcxx_symbols_assembler_test.sh  link_wrapper.c  linker_contracts.bzl  linker_wrapper.cc  linker_wrapper_config.h
tools/internal/libstdcxx_symbols_assembler_testdata/: append.golden  base.ver  insert.golden  port_append.ver
