load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("//toolchain:selects.bzl", "LLVM_VERSION")

# gazelle:map_kind bzl_library bzl_library @bazel_lib//:bzl_library.bzl

exports_files([
    "MODULE.bazel",
    ".buildifier.json",
])

platform(
    name = "rbe_linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//constraints/libc:gnu.2.28",
    ],
    exec_properties = {
        "Arch": "amd64",
        "OSFamily": "Linux",
        "container-image": "docker://ubuntu:22.04",
    },
    visibility = ["//visibility:public"],
)

platform(
    name = "rbe_linux_aarch64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
        "//constraints/libc:gnu.2.28",
    ],
    exec_properties = {
        "Arch": "arm64",
        "OSFamily": "Linux",
        "container-image": "docker://ubuntu:22.04",
    },
    visibility = ["//visibility:public"],
)

alias(
    name = "builtin_resource_dir",
    actual = select({
        "//platforms/config:macos_x86_64_stage0_prebuilt_seed": "@llvm-toolchain-minimal-%s-darwin-amd64//:builtin_resource_dir" % LLVM_VERSION,
        "//platforms/config:macos_aarch64_stage0_prebuilt_seed": "@llvm-toolchain-minimal-%s-darwin-arm64//:builtin_resource_dir" % LLVM_VERSION,
        "//platforms/config:linux_x86_64_stage0_prebuilt_seed": "@llvm-toolchain-minimal-%s-linux-amd64//:builtin_resource_dir" % LLVM_VERSION,
        "//platforms/config:linux_aarch64_stage0_prebuilt_seed": "@llvm-toolchain-minimal-%s-linux-arm64//:builtin_resource_dir" % LLVM_VERSION,
        "//platforms/config:windows_aarch64_stage0_prebuilt_seed": "@llvm-toolchain-minimal-%s-windows-arm64//:builtin_resource_dir" % LLVM_VERSION,
        "//platforms/config:windows_x86_64_stage0_prebuilt_seed": "@llvm-toolchain-minimal-%s-windows-amd64//:builtin_resource_dir" % LLVM_VERSION,
    }),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "directory",
    srcs = ["directory.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_skylib//rules/directory",
        "@bazel_skylib//rules/directory:providers",
        "@bazel_skylib//rules/directory:subdirectory",
    ],
)

bzl_library(
    name = "http_pkg_archive",
    srcs = ["http_pkg_archive.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//lib:repo_utils",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "http_bsdtar_archive",
    srcs = ["http_bsdtar_archive.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//lib:repo_utils",
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "sh_script",
    srcs = ["sh_script.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_lib//lib:run_binary"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
)
