bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "bazel_features", version = "1.42.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.20")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "with_cfg.bzl", version = "0.12.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "llvm", version = "")
local_path_override(
    module_name = "llvm",
    path = "../../",
)

# TODO: Drop once a rules_cc release registers the C++20 module build variables
# (cpp_module_output_file, cpp_module_modmap_file) in the rules-based toolchain
# variable set and ships the compile.bzl analysis fix. The patches are
# bazelbuild/rules_cc PRs #750 and #775; the files are symlinks to the parent
# llvm module's copies (single_version_override only accepts main-repo labels).
single_version_override(
    module_name = "rules_cc",
    patch_strip = 1,
    patches = [
        "//3rd_party/rules_cc:0001-support-cpp20-modules-rules-based-toolchain-api.patch",
        "//3rd_party/rules_cc:0002-fix-cpp20-modules-compilation-analysis.patch",
    ],
    version = "0.2.20",
)

llvm = use_extension("@llvm//extensions:llvm.bzl", "llvm")
use_repo(llvm, "llvm-project")

gcc = use_extension("@llvm//3rd_party/gcc/extension:gcc.bzl", "gcc")
use_repo(gcc, "gcc")

musl = use_extension("@llvm//runtimes/musl/extension:musl.bzl", "musl")
use_repo(musl, "musl_libc")

# Register toolchains through the scoped repo to ensure this codepath works.
llvm_toolchains = use_extension("@llvm//extensions:toolchain.bzl", "toolchain")
use_repo(llvm_toolchains, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")

# Bump transitive zlib version to avoid genrules.
bazel_dep(name = "zlib", version = "1.3.1.bcr.8")
