package(default_visibility = ["//visibility:public"])

alias(
    name = "headers_include_search_directory",
    actual = "@llvm-project//libcxx:libcxx_headers_include_search_directory",
)

alias(
    name = "abi_headers_include_search_directory",
    actual = "@llvm-project//libcxxabi:libcxxabi_headers_include_search_directory",
)

alias(
    name = "library_search_directory",
    actual = "//runtimes/libcxx:libcxx_library_search_directory",
)

filegroup(
    name = "static_runtime_lib",
    srcs = select({
        "@platforms//os:linux": [
            "@llvm-project//libcxx:libcxx.static",
            "@llvm-project//libcxxabi:libcxxabi.static",
            "@llvm-project//libunwind:libunwind.static",
        ],
        "@platforms//os:windows": [
            "@llvm-project//libcxx:libcxx.static",
            "@llvm-project//libcxxabi:libcxxabi.static",
            "@llvm-project//libunwind:libunwind.static",
        ],
        "//conditions:default": [],
    }),
)

filegroup(
    name = "dynamic_runtime_lib",
    srcs = select({
        "@platforms//os:linux": [
            "@llvm-project//libcxx:libcxx.shared",
            "@llvm-project//libcxxabi:libcxxabi.shared",
            "@llvm-project//libunwind:libunwind.shared",
        ],
        # TODO(zbarsky): windows?
        "//conditions:default": [],
    }),
)
