load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("//runtimes:defs.bzl", "stub_library")
load("//toolchain/runtimes:filegroup.bzl", "stage0_filegroup")

alias(
    name = "libcxx",
    actual = "@libcxx//:libcxx",
)

alias(
    name = "libcxx.static",
    actual = "@libcxx//:libcxx.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "libcxxabi",
    actual = "@libcxxabi//:libcxxabi",
)

alias(
    name = "libcxx.shared",
    actual = "@libcxx//:libcxx.shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "libcxxabi.static",
    actual = "@libcxxabi//:libcxxabi.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "libcxxabi.shared",
    actual = "@libcxxabi//:libcxxabi.shared",
    visibility = ["//visibility:public"],
)

stage0_filegroup(
    name = "libcxx.stage0",
    srcs = [":libcxx"],
    visibility = ["//visibility:public"],
)

stage0_filegroup(
    name = "libcxxabi.stage0",
    srcs = [":libcxxabi"],
    visibility = ["//visibility:public"],
)

stub_library(
    name = "c++",
)

stub_library(
    name = "c++abi",
)

copy_to_directory(
    name = "libcxx_library_search_directory",
    srcs = [
        ":c++",
        ":c++abi",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "libcxx_headers_include_search_directory",
    actual = "@libcxx//:libcxx_headers_include_search_directory",
    visibility = ["//visibility:public"],
)

alias(
    name = "libcxxabi_headers_include_search_directory",
    actual = "@libcxxabi//:libcxxabi_headers_include_search_directory",
    visibility = ["//visibility:public"],
)
