load("@bazel_lib//lib:run_binary.bzl", "run_binary")
load("//toolchain/args:llvm_target_triple.bzl", "LLVM_TARGET_TRIPLE")
load("//toolchain/runtimes:cc_runtime_shared_library.bzl", "cc_runtime_stage0_shared_library")
load("//toolchain/runtimes:cc_runtime_static_library.bzl", "cc_runtime_stage0_static_library")

run_binary(
    name = "gcc_s.version_script",
    srcs = [
        "gcc_s.ver.in",
    ],
    outs = ["gcc_s.ver"],
    args = [
        "-E",
        "-x",
        "c",
        "$(location gcc_s.ver.in)",
        "-target",
    ] + LLVM_TARGET_TRIPLE + [
        "-o",
        "$(location gcc_s.ver)",
    ],
    tool = "//tools:clang",
    visibility = ["//visibility:public"],
)

cc_runtime_stage0_static_library(
    name = "gcc_eh",
    deps = [
        "@llvm-project//libunwind:libunwind",
    ],
)

cc_runtime_stage0_shared_library(
    name = "gcc_s",
    additional_linker_inputs = [":gcc_s.version_script"],
    shared_lib_name = "libgcc_s.so.1",
    user_link_flags = [
        "-Wl,--version-script=$(location :gcc_s.version_script)",
        "-Wl,-soname,libgcc_s.so.1",
    ],
    deps = [
        "@llvm-project//compiler-rt:builtins",
        "@llvm-project//libunwind:libunwind",
    ],
)

filegroup(
    name = "static_runtime_lib",
    srcs = [
        ":gcc_eh",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "dynamic_runtime_lib",
    srcs = [
        ":gcc_s",
    ],
    visibility = ["//visibility:public"],
)
